Fixed the issue where sections were overlapping on small height screens

--- a/app/styles/_base.sass
+++ b/app/styles/_base.sass
@@ -196,7 +196,7 @@ section
   // Sections
 
   section
-    padding: 75px 0 0
+    padding: 75px 0 30px
     text-align: center
 
   #about, #contact
